# temp3dgame

./: .gitignore  CMakeLists.txt
assets/fbx/: Cube.fbx  UtahTeapot.fbx
cmake-modules/assimp/: Findassimp.cmake
include/assimp/: scene.h
lib/assimp-msvc-debug/: assimp-vc141-mtd.exp  assimp-vc142-mtd.exp
lib/assimp-msvc-release/: assimp-vc141-mt.exp  assimp-vc142-mt.exp
lib/debug/: freeglutd.exp
lib/release/: freeglut.exp
src/: CMakeLists.txt  FBXLoader.cpp  FBXLoader.h  Object.cpp  Object.h  Quaternion.cpp  Quaternion.h  Texture.cpp  Texture.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  main.cpp  sample.cpp  sample.h
